# Brave

./: CMakeLists.txt
code/BaseClass/: NodeBase.cpp  NodeBase.h  SceneBase.cpp  SceneBase.h
code/Block/: CBlock.cpp  CBlock.h
code/Board/: CBoard.cpp  CBoard.h
code/CrossFile/: CrossFile.cpp  CrossFile.h
code/GUI/: CButton.cpp  CButton.h  CTextPanel.h  CWidget.h
code/Game/: CGame.cpp  CGame.h
code/Main/: common config.yaml  main  main.cpp  scene config.yaml  test  test.txt
code/SceneTree/: SceneTree.cpp  SceneTree.h
code/Timer/: CTimer.cpp  CTimer.h
code/board/: CBoard.cpp  CBoard.h
resources/configures/: common config.yaml  first scene.yaml  root scene.yaml  scene tree.yaml
